--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
 padding:0;
 margin:0;
+font-family: Helvetica;
 }
 .container {
 	width:100%;
@@ -18,7 +19,40 @@ header {
 	font-family: 'BallparkWeiner';
 	font-size:36px;
 	color:#e0e0e0;
+	margin:8px 0 0 ;
+	width:200px;
 }
 nav {
 	display:inline-block;
+	margin:8px 0 0;
+	padding:0;
+	width:710px; 
+	font-size:12px;
+	color: #e8e8e8;
+	
+	text-align:center;
+}
+nav ul {
+	margin:0;
+	padding:0;
+	float:right;
+	list-style:none;
+	
+}
+nav ul li {
+	display:inline-block;
+	margin:0 22px;
+	
+	padding: 0 14px;
+	height:30px;
+	line-height:30px;
+}
+nav ul li.active, nav ul li:hover {
+	background: radial-gradient(center, ellipse cover, #2F2F2F 33%, #2B2B2B 80%); 
+background: -moz-radial-gradient(center, ellipse cover, #2F2F2F 33%, #2B2B2B 80%); 
+background: -webkit-radial-gradient(center, ellipse cover, #2F2F2F 33%, #2B2B2B 80%); 
+background: -o-radial-gradient(center, ellipse cover, #2F2F2F 33%, #2B2B2B 80%);
+border-radius: 5px; 
+-webkit-border-radius: 5px; 
+-moz-border-radius: 5px; 
 }
