--- a/css/font.css
+++ b/css/font.css
@@ -10,3 +10,10 @@
   font-style: normal;
 }
 
+@font-face {
+	font-family: 'Conv_HelveticaNeueCyr-Bold';
+	src: url('../fonts/HelveticaNeueCyr-Bold.eot');
+	src: local('вє'), url('../fonts/HelveticaNeueCyr-Bold.woff') format('woff'), url('../fonts/HelveticaNeueCyr-Bold.ttf') format('truetype'), url('../fonts/HelveticaNeueCyr-Bold.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
